--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ Markdown
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mistune==0.8.4
-mkl-fft==1.3.0
+mkl-fft
 mkl-random==1.1.1
 mkl-service==2.3.0
 nbclient 
