--- a/requirements.txt
+++ b/requirements.txt
@@ -48,8 +48,8 @@ MarkupSafe==1.1.1
 matplotlib==3.3.4
 mistune==0.8.4
 mkl-fft
-mkl-random==1.1.1
-mkl-service==2.3.0
+mkl-random
+mkl-service
 nbclient 
 nbconvert 
 nbformat 
