--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ tensorflow-estimator==2.0.0
 termcolor==1.1.0
 terminado==0.9.2
 testpath 
-tifffile==2021.3.5
+tifffile
 torch==1.8.0
 tornado 
 traitlets 
